--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -52,7 +52,7 @@ main {
 
 .container {
   height: 95vh;
-  width: 20vw;
+  width: 22vw;
   max-height: 896px;
   min-width: 375px;
   background: var(--clr-greyLight-1);
