--- a/scss/components/_album.scss
+++ b/scss/components/_album.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 1rem;
   .dot {
     width: 45px;
     height: 45px;
