--- a/scss/components/_text.scss
+++ b/scss/components/_text.scss
@@ -5,6 +5,11 @@
   text-transform: uppercase;
   justify-content: center;
   align-items: center;
+  margin-bottom: 1rem;
+}
+
+.songDetails {
+  margin-top: 1rem;
 }
 
 .currently-playing-artist-next,
